AUTOMAKE_OPTIONS = foreign

if INTEL_COMPILER
AM_CXXFLAGS = -O3 -m64 -fPIC -std=c++11 @OPENMP_INTEL@
else
AM_CXXFLAGS = -O3 -m64 -fPIC -std=c++11 @OPENMP_GNU@
endif

AM_CPPFLAGS = 	@USE_MKL@ @USE_EXTERNAL_LIBRARIES@ \
		@COMPULSORY_INCLUDE_DIRS@ @EXTERNAL_INCLUDE_DIRS@ @MKL_INCLUDE_DIR@

AM_LDFLAGS  =   @MKL_LIBS@ @BOOST_LIBS@ -lgfortran

#List of programs
bin_PROGRAMS = 	RedChemSMOKEpp.sh 

#RedChemSMOKE++
RedChemSMOKEpp_sh_SOURCES = ../../src/RedChemSMOKEpp.cpp
RedChemSMOKEpp_sh_CPPFLAGS = @USE_MKL@  @COMPULSORY_INCLUDE_DIRS@ @MKL_INCLUDE_DIR@
RedChemSMOKEpp_sh_LDADD = @EXTERNAL_LIBS@ @LIBCONFIG_LIBS@

